# digitalyst-web-sample

./: README.md  main._basepy  main.py  pyproject.toml  requirements.txt  z_memo.txt
Web/: WebLocalization.xlsx
controllers/web/: web_controller.py
models/web/: web_drillviewdata_model.py
services/: csv_service.py  dataframe_serivce.py  field_data_serivce.py  google_service.py  graph_image_serivce.py  import_data_function_create_df10.py  import_data_service.py  import_file_serivce.py  json_serivce.py  license_service.py  live_data_reset_debug.py  live_data_service.py  live_file_serivce.py  localization_service.py  logger_service.py  os_service.py  page_manager.py  path_serivce.py  performance_calc_service.py  performance_calc_service_web.py  usb_data_service.py  web_path_serivce.py  web_url_serivce.py  windows_drive_service.py
views/helpers/: color_helper.py  content_helper.py  snackbar_manager.py
views/web/: panel_file_drill_select.py  panel_graph_display.py  panel_metric_select.py  panel_player_select.py  web_chart_base.py  web_drill_view.py
